# AlgoritimoAula

./: README.md
pratica01/: CMakeLists.txt  pratica01.cpp  pratica01.h
