# CMakeList.txt: projeto de CMake para pratica01, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

project ("pratica01")

# Adicione a origem ao executável deste projeto.
add_executable (pratica01 "pratica01.cpp" "pratica01.h")

# TODO: Adicione testes e instale destinos, se necessário.
